2005-11-06  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-contexts.c
	* app/core/gimp-documents.c
	* app/core/gimp-parasites.c
	* app/core/gimp-templates.c
	* app/core/gimp-units.c
	* app/core/gimpdatafactory.c
	* app/core/gimptooloptions.c
	* app/gui/color-history.[ch]
	* app/gui/gui.c
	* app/gui/session.c
	* app/plug-in/plug-ins.c
	* app/text/gimp-fonts.c
	* app/tools/gimp-tools.c
	* app/widgets/gimpcontrollers.c
	* app/widgets/gimpdevices.c: when running --verbose, print the
	name of each config file parsed or written.

2005-11-06  Sven Neumann  <sven@gimp.org>

	Added support for binary relocation by means of binreloc, largely
	based on a patch by Hongli Lai:

	* m4macros/Makefile.am
	* m4macros/binreloc.m4: new file providing a macro to check for
	binreloc support.

	* acinclude.m4
	* configure.in: use the macro.

	* libgimpbase/Makefile.am
	* libgimpbase/gimpreloc.[ch]: new files providing binreloc support
	on Linux.

	* libgimpbase/gimpenv.[ch]: use binreloc, provide a function to
	initialize the environment machinery.

	* libgimpbase/gimpbase.def: updated.

	* app/Makefile.am: fiddle with the LDFLAGS for binreloc.

	* app/main.c (main): gimp_env_init(FALSE).

	* libgimp/gimp.c (gimp_main): gimp_env_init(TRUE).

2005-11-06  Sven Neumann  <sven@gimp.org>

	* modules/controller_midi.c (midi_set_device): corrected casting.

2005-11-05  Sven Neumann  <sven@gimp.org>

	* app/Makefile.am: removed unused variable scriptdata.

	* app/plug-in/plug-ins.c (plug_ins_init): Fixed progress value for
	plug-in query and initialization.

	* plug-ins/common/uniteditor.c (new_unit_dialog): use a
	GtkMessageDialog instead of g_message(). Some string changes.

2005-11-05  Sven Neumann  <sven@gimp.org>

	* app/plug-in/plug-ins.c (plug_ins_init): fine-tuning.

2005-11-05  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/app.pl: removed calls to the splash update function
	during initialization of internal procedures. This only takes time